--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <!--<app-header> </app-header>
-<app-hero> </app-hero>-->
+<app-hero> </app-hero>
 <router-outlet></router-outlet>
+-->
+<app-rooms> </app-rooms>
