creado home y  habitaciones

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<!--<app-header> </app-header>
+<!--
+<app-header> </app-header>
 <app-hero> </app-hero>
-<router-outlet></router-outlet>
--->
 <app-rooms> </app-rooms>
+<router-outlet></router-outlet>
+<app-home> </app-home>
+<app-list-rooms> </app-list-rooms>
+-->
+<router-outlet></router-outlet>
