--- a/src/app/home/hero/hero.component.html
+++ b/src/app/home/hero/hero.component.html
@@ -1,7 +1,9 @@
-<app-header></app-header>
-<div class="hero">
-</div>
+<div class="hero"></div>
 <div class="text">
-    <h1> Tu comodidad en nuestras manos</h1>
-    <p> Perfecta relajación </p>
+  <div class="titulo">
+    <h1>Tu comodidad en</h1>
+    <h1>nuestras manos</h1>
+  </div>
+
+  <p>Perfecta relajación</p>
 </div>
