--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -1,1 +1,62 @@
-<h1>Hola Mundo</h1>
+<footer class="site-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <h6>Acerca de nosotros</h6>
+        <p class="text-justify">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. At numquam
+          modi, non ex expedita assumenda, doloremque, aliquam adipisci
+          voluptates voluptatibus earum? Modi harum itaque accusantium
+          dignissimos quae expedita placeat iusto!
+        </p>
+      </div>
+
+      <div class="col-xs-6 col-md-3">
+        <h6>Accesos rapidos</h6>
+        <ul class="footer-links">
+          <li><a href="#">Reservar</a></li>
+          <li><a href="#">Habitaciones</a></li>
+          <li><a href="#">Sucursales</a></li>
+        </ul>
+      </div>
+
+      <div class="col-xs-6 col-md-3">
+        <h6>Menu</h6>
+        <ul class="footer-links">
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Habitaciones</a></li>
+          <li><a href="#">Servicios</a></li>
+          <li><a href="#">Contactos</a></li>
+        </ul>
+      </div>
+    </div>
+    <hr />
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-sm-6 col-xs-12">
+        <p class="copyright-text">
+          Copyright &copy; 2023 All Rights Reserved by
+          <a href="#">Grupo #1</a>.
+        </p>
+      </div>
+
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <ul class="social-icons">
+          <li>
+            <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
+          </li>
+          <li>
+            <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+          </li>
+          <li>
+            <a class="dribbble" href="#"><i class="fa fa-instagram"></i></a>
+          </li>
+          <li>
+            <a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
