--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,9 @@
 <app-rooms> </app-rooms>
 <router-outlet></router-outlet>
 <app-home> </app-home>
-<app-list-rooms> </app-list-rooms>
--->
+<app-list-rooms> </app-list-rooms>}
 <router-outlet></router-outlet>
+<app-list-serv> </app-list-serv>
+-->
+
+<app-contactos> </app-contactos>
