--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -6,8 +6,8 @@
     <ul>
       <li><a routerLink="/home">Inicio</a></li>
       <li><a routerLink="/habitaciones">Habitaciones</a></li>
-      <li><a href="#">Servicios</a></li>
-      <li><a href="#">Contactos</a></li>
+      <li><a routerLink="/servicios">Servicios</a></li>
+      <li><a routerLink="/contactanos">Contactos</a></li>
     </ul>
   </div>
   <div class="Botones" *ngIf="!auth.isLoggedIn">
